footer margin and padding fix, added some gaps

--- a/css/styles.css
+++ b/css/styles.css
@@ -803,6 +803,7 @@ footer {
 footer > .container {
   display: flex;
   flex-direction: column;
+  gap: 72px;
 }
 
 .studio {
@@ -812,17 +813,14 @@ footer > .container {
 .footer-text .logo {
   display: block;
   text-align: center;
-}
-
-.footer-text {
-  margin-bottom: 72px;
+  padding: 0;
+  margin-bottom: 16px;
 }
 
 .footer-icon {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 72px;
 }
 
 .footer-icon p {
@@ -938,7 +936,7 @@ footer > .container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 24px;
+    gap: 72px 24px;
     align-items: baseline;
   }
 
